-complete manga features (set manga cover) -make local file service create directory on all asset types
