# docs/swagger.json
@@ -30,13 +30,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/common.Response"
+                            "$ref": "#/definitions/dto.SuccessResponse"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/common.Response"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -44,31 +44,29 @@
         }
     },
     "definitions": {
-        "common.Response": {
+        "dto.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
-                "data": {},
+                "details": {},
                 "message": {
-                    "type": "string"
-                },
-                "page": {
-                    "$ref": "#/definitions/common.ResponsePage"
-                },
-                "status": {
                     "type": "string"
                 }
             }
         },
-        "common.ResponsePage": {
+        "PagedSuccessResponse": {
+
+        },
+        ""
+        "dto.ResponsePage": {
             "type": "object",
             "properties": {
-                "current_page": {
+                "elements": {
                     "type": "integer"
                 },
-                "elements_page": {
+                "page": {
                     "type": "integer"
                 },
                 "total_elements": {
@@ -76,6 +74,18 @@
                 },
                 "total_page": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "page": {
+                    "$ref": "#/definitions/dto.ResponsePage"
                 }
             }
         }
